--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: generic
+language: shell
 
 jobs:
     include:
@@ -10,4 +10,4 @@ jobs:
           dist: bionic
         - os: osx
 
-script: ./travis.sh && ./test.sh
+script: echo $PATH && ./travis.sh && ./test.sh
