--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ jobs:
           dist: bionic
         - os: osx
 
-script: echo $PATH && ./travis.sh && ./test.sh
+script: ./travis.sh && ./test.sh
